ref #94: Fix vertical align in select forms.

--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -469,7 +469,7 @@
       font-family: "Open Sans", "Droid Sans", sans-serif;
       font-size: 12px;
       height: 25px;
-      line-height: 25px;
+      line-height: 21px;
       padding: 1px; }
     .profile .profile-content form .form-control {
       margin-left: -10px;
