--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -20,7 +20,7 @@ form {
     font-family: $font-sans;
     font-size: 12px;
     height: 25px;
-    line-height: 25px;
+    line-height: 21px;
     padding: 1px;
   }
   .form-control {
